--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,12 @@
 .footer {
-  text-align: center;
+  text-align: end;
+  border-top: 0.2px solid rgb(241, 236, 236);
+  font-size: 5vh;
+}
 
-  border-top: 0.2px solid rgb(236, 231, 231);
-  font-size: 6.5vh;
+.name {
+  vertical-align: middle;
+  color: rgba(0, 0, 0, 0.45);
+  font-size: 2.5vh;
+  line-height: 1.5715;
 }
