--- a/src/components/Loading/Loader.css
+++ b/src/components/Loading/Loader.css
@@ -11,10 +11,10 @@
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid #86c023;
+  border: 8px solid #1890ff;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #86c023 transparent transparent transparent;
+  border-color: #1890ff transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
