--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,4 +1,5 @@
 .pagination {
+  margin-bottom: 3em;
   text-align: center;
   padding: 0 25px;
   display: inline-block;
@@ -16,5 +17,5 @@
 }
 
 .btn:hover {
-  color: #86c023;
+  color: #188fffb0;
 }
